--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.60.1",
+    "@react-three/fiber": "^9.0.0",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.11.4",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.12.16",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "framer-motion": "^10.12.16",
-    "@react-three/fiber": "^9.0.0",
-    "three": "^0.163.0",
-    "@react-three/drei": "^9.60.1",
-    "axios": "^1.4.0"
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
